# Dyploma

./: .gitmodules  README.md  README.md.backup
Detector/: CMakeLists.txt  CMakeLists.txt.user.e0258e4  main.qml
Detector/src/: OpenCVFilter.cpp  OpenCVFilter.h  cvutils.cpp  cvutils.h  main.cpp  videoprocessor.cpp  videoprocessor.h
Detector/src/filters/: SIFT.cpp  SIFT.h  goodfeaturestotrack.cpp  goodfeaturestotrack.h  ivideofilter.cpp  ivideofilter.h  videofilters.cpp  videofilters.h
Detector/ui/: main.qml
